# rust-learning-journey

./: README.md  config.json  status.txt
code/2. Programming a Guessing Game/guessing_game/: Cargo.toml
code/2. Programming a Guessing Game/guessing_game/src/: main.rs
code/guessing_game/: Cargo.toml
notes/: Getting started
notes/Rust Book/: 1. Getting Started.md  1. Introduction  10. Generic Types, Traits, and Lifetimes.md  10.1 Generic Data Types.md  10.2 Traits Defining Shared Behavior.md  10.2 Traits: Defining Shared Behavior.md  10.3 Validating References with Lifetimes.md  2. Programming a Guessing Game.md  3. Common Programming Concepts.md  3.1. Variables and Mutability.md  3.2. Data Types.md  3.3. Functions.md  3.4. Comments.md  3.5. Control Flow.md  4. Understanding Ownership.md  4.1. What is Ownership.md  4.2. References and Borrowing.md  4.3. The Slice Type.md  5. Using Structs to Structure Related Data.md  5.1. Defining and Instantiating Structs.md  5.2. An Example Program Using Structs.md  5.3 Mehod Syntax.md  6. Enums and Pattern Matching.md  6.1. Defining an Enum.md  6.2. The match Control Flow Construct.md  6.3. Concise Control Flow with if let.md  7. Managing Growing Projects with Packages, Crates, and Modules.md  7.1. Packages and Crates.md  7.2. Defining Modules to Control Scope and Privacy.md  7.3. Paths for Referring to an Item in the Module Tree.md  7.4. Bringing Paths into Scope with the use Keyword.md  7.5 Separating Modules into Different Files.md  8. Common Collections.md  8.1 Storing Lists of Values with Vectors.md  9. Error Handling.md  (+5 more)
(+44 files in other folders)
